[package]
name = "serializable-tree"
version = "0.1.0"
authors = ["zylkowski <arkadiuszzylkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
time = "*"
serde = { version= "*", features = ['derive']}
serde_yaml = "*"
simdnoise = "3.1.6"
image = "*"
typetag = "*"
f8 = "0.1.1"